--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="profile-Img">
-      <img src="/stuff/K_D_1847-copy.JPG" alt="Dipesh Sharma" />
+      <img src="/IMG/profile.JPG" alt="Dipesh Sharma" />
       <h1>Dipesh Sharma</h1>
     </div>
 
