--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Profile Card</title>
+    <title>Dipesh Sharma</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -21,7 +21,7 @@
     </header>
 
     <div class="profile-Img">
-      <img src="/assets/profile.jpg" alt="Dipesh Sharma" />
+      <img src="./assets/profile.jpg" alt="Dipesh Sharma" title=""/>
       <h1>Dipesh Sharma</h1>
     </div>
 
